--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
+    "sharp": "^0.32.6",
     "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
