--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
-    "sharp": "^0.32.6",
     "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
@@ -55,5 +54,8 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "sharp": "0.32.6"
   }
 }
