--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pengawas",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "private": true,
   "engines": {
     "node": ">=20.0.0",
@@ -41,6 +41,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
+    "swr": "^2.4.0",
     "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
